<resources>
    <string name="app_name">StartUP</string>
    <string name="Information">ABOUT THE EVENT</string>
    <string name="Schedule">EVENT SCHEDULE</string>
    <string name="Speakers">EVENT SPEAKERS</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Ticket number is 6 symbols</string>
    <string name="Workshops">WORKSHOPS</string>
    <string name="Email">Email </string>
    <string name="Privacy"> I agree with the Policy</string>
    <string name="Register"> Register </string>
</resources>
