<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginForm"
    android:onClick="hideKeyboard">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/loginlogo2" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_below="@id/imageView"
        android:layout_marginTop="40dp"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/roundtextbox"
            android:drawableStart="@drawable/ic_action_name"
            android:drawableLeft="@drawable/ic_action_name"
            android:ems="12"
            android:fontFamily="sans-serif"
            android:layout_gravity="center_vertical"
            android:hint="Full Name"
            android:inputType="textPersonName"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_below="@id/input_layout_name"
        android:layout_marginTop="15dp"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusableInTouchMode="true">
    <EditText
        android:id="@+id/input_email"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@+id/input_layout_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundtextbox"
        android:drawableStart="@drawable/ic_action_email"
        android:drawableLeft="@drawable/ic_action_email"
        android:layout_gravity="center_vertical"
        android:ems="12"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_below="@id/input_layout_email"
        android:layout_marginTop="15dp"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">
    <EditText
        android:id="@+id/input_password"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@+id/input_layout_email"
        android:layout_gravity="center_vertical"
        android:layout_alignStart="@+id/input_layout_email"
        android:layout_alignLeft="@+id/input_layout_email"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundtextbox"
        android:drawableStart="@drawable/ic_action_password"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="12"
        android:hint="Ticket Number"
        android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@+id/input_layout_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="#CE95A5"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Register"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <CheckBox
        android:id="@+id/privacy"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_password"
        android:text="@string/Privacy"
        android:layout_centerHorizontal="true"
        android:onClick="checkboxChecked"/>
</RelativeLayout>